[package]
name = "pcopy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
async-channel = "2.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
filetime = "0.2"

[dev-dependencies]
tempfile = "3.0"
